fix: wrap reverse

--- a/next/styles/_events.scss
+++ b/next/styles/_events.scss
@@ -36,6 +36,7 @@
       }
 
       .body {
+        margin: 0;
         font-weight: 400;
         font-size: 1.1em;
 
@@ -48,7 +49,7 @@
     .reverse {
       @include flexCenter(row-reverse);
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       @media only screen and (max-width: 800px) {
         justify-content: flex-start;
       }
